fixed button spacing on community section and support section

--- a/fle_site/static/less/styles.less
+++ b/fle_site/static/less/styles.less
@@ -447,6 +447,10 @@ a.icon:before {
     }
 }
 
+div#commbtns.row {
+    padding-top:0;
+    padding-bottom:5rem;
+}
 #deployment {
     img {
         width: 1100px;
